# legs_rl_lab

./: .gitignore  README.md  legs_rl_lab.sh
deploy/: .gitignore  install_ros2_humble.sh  start_real.sh  stop_real.sh  sync_pd.py
deploy/control_ws/: usbcan.rules
deploy/control_ws/src/armcontrol/: CMakeLists.txt  package.xml
deploy/control_ws/src/armcontrol/config/: arm_control_node.yaml
deploy/control_ws/src/armcontrol/include/armcontrol/: damiao.h  damiao_can.h  os_support.h  path_smoother.h  serial_port.h  smooth.h  socketcan.h  types.h
deploy/control_ws/src/armcontrol/src/: arm_control_node.cpp  path_smoother.cpp  socketcan.cpp
deploy/control_ws/src/armcontrol/urdf/v1.0/: arm_damiao_left.urdf  arm_damiao_right.urdf  robot.urdf
deploy/control_ws/src/armcontrol/urdf/v2.0/: damiao_left.urdf  damiao_right.urdf  robot.urdf
deploy/control_ws/src/armcontrol/urdf/v2.1/: damiao_left.urdf  damiao_right.urdf  robot.urdf
deploy/control_ws/src/armcontrol/urdf/v2.2/: damiao_left.urdf  damiao_left_1kg.urdf  damiao_left_without_gripper.urdf  damiao_right.urdf  damiao_right_1kg.urdf  robot.urdf
deploy/control_ws/src/armcontrol/urdf/v3.2/: damiao_left.srdf  damiao_left.urdf  damiao_right.srdf  damiao_right.urdf
deploy/control_ws/src/armcontrol/urdf/v3.3/: damiao_left.urdf  damiao_right.urdf
deploy/control_ws/src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
deploy/imu_ws/src/wit_ros2_imu/: bind_usb.sh  tty_imu.rules
deploy/imu_ws/src/wit_ros2_imu/launch/: rviz_and_imu.launch.py
deploy/imu_ws/src/wit_ros2_imu/wit_ros2_imu/: wit_ros2_imu.py
deploy/rl_real_py/: package.xml  setup.cfg  setup.py
deploy/rl_real_py/configs/: common.yaml
deploy/rl_real_py/rl_real_py/: rl_real_common.py
deploy/sysid/src/: analyze_pd_grid.py  excite_record.py  gen_summary.py  goto_zero.py  joint_kp_sweep.sh  knee_kp_sweep.sh  plot_dc_sweep.py  plot_ddc.py  plot_ddc_sweep.py  plot_experiment.py  plot_joint_windows.py  plot_kp_detail.py  plot_kp_sweep.py  plot_real_log.py  plot_repeat.py  plot_sweep_tracks.py  plot_torque_windows.py  plot_vlim_sweep.py  plot_walk_replay.py  plot_walk_replay_all.py  replay_real_in_mujoco.py  set_pd.py  static_zero_check.py  verify_torque_model.py
deploy/sysid/src/isaac/: replay.py  walk_replay.py  walk_replay_sweep.py
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/rsl_rl/: play.py  train.py
source/legs_rl_lab/: setup.py
source/legs_rl_lab/config/: extension.toml
source/legs_rl_lab/docs/: CHANGELOG.rst
source/legs_rl_lab/legs_rl_lab/: ui_extension_example.py
source/legs_rl_lab/legs_rl_lab/actuators/: __init__.py  delayed_dc_motor.py
source/legs_rl_lab/legs_rl_lab/assets/legs_URDF/: legs.py  nlegs.py
source/legs_rl_lab/legs_rl_lab/assets/legs_URDF/meshes/: Link_L0.STL  Link_L1.STL  Link_L2.STL  Link_L3.STL  Link_L4.STL  Link_L5.STL  Link_L6.STL  Link_R0.STL  Link_R1.STL  Link_R2.STL  Link_R3.STL  Link_R4.STL  Link_R5.STL  Link_R6.STL  base_link.STL
source/legs_rl_lab/legs_rl_lab/assets/legs_URDF/mjcf/: A1_legs_V2_mjcf.xml  A1_legs_V2_narrow_mjcf.xml  A1_legs_V2_narrow_mjcf_scene.xml  convert_urdf_to_mjcf.py
source/legs_rl_lab/legs_rl_lab/assets/robots/: g123.py
source/legs_rl_lab/legs_rl_lab/tasks/g1_task/task/qie/: __init__.py  qie_env_cfg.py  sim2sim.py
source/legs_rl_lab/legs_rl_lab/tasks/legs_task/agents/: rsl_rl_ppo_cfg.py
source/legs_rl_lab/legs_rl_lab/tasks/legs_task/mdp/: __init__.py  events.py  observations.py  rewards.py
source/legs_rl_lab/legs_rl_lab/tasks/legs_task/task/legs/: __init__.py  legs_dr_env_cfg.py  legs_env_cfg.py  sim2sim.py
source/legs_rl_lab/legs_rl_lab/tasks/legs_task/task/nlegs/: __init__.py  nlegs_env_cfg.py  sim2sim.py
source/legs_rl_lab/legs_rl_lab/tasks/manager_based/legs_rl_lab/: __init__.py  legs_rl_lab_env_cfg.py
source/legs_rl_lab/legs_rl_lab/tasks/nlegs_task/agents/: rsl_rl_ppo_cfg.py
source/legs_rl_lab/legs_rl_lab/tasks/nlegs_task/mdp/: gait.py  observations.py  rewards.py  symmetry.py
source/legs_rl_lab/legs_rl_lab/tasks/nlegs_task/task/nlegs/: __init__.py  nlegs_env_cfg.py  sim2sim.py
source/legs_rl_lab/legs_rl_lab/utils/: export_deploy_cfg.py
