<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_real_py</name>
  <version>0.1.0</version>
  <description>通用 config 驱动的强化学习策略实机部署节点 (rl_real_common)。</description>
  <maintainer email="woan@todo.todo">woan</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!-- onnxruntime 不在 rosdep 标准库, 需 pip 安装: pip install onnxruntime -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
